# archguru

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: adr-001-architecture.md  adr-002-evaluation-orchestration.md  roadmap.md
docs/v2/: 001.md  002.md  003.md  004.md  005.md  roadmap.md
src/archguru/: presets.yaml
src/archguru/agents/: debate.py  pipeline.py
src/archguru/api/: base_client.py  github.py  openrouter.py  reddit.py  stackoverflow.py
src/archguru/cli/: main.py
src/archguru/core/: config.py  constants.py  response_parser.py  state.py
src/archguru/models/: decision.py
src/archguru/storage/: elo.py  repo.py  schema.sql
tools/: export_code.sh  files_archguru.txt
