[project]
name = "archguru"
version = "0.1.0"
description = "Universal AI Architecture Decision Platform - Get architectural guidance from competing AI models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai>=1.107.2",
    "python-dotenv>=1.1.1",
]

[project.scripts]
archguru = "archguru.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
package = true
